# cpos

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  TROUBLESHOOTING.md  install.sh  vercel.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release.yml
Formula/: cpos.rb
assets/publish-site/: data.sample.json  index.html
bucket/: cpos.json
docs/: index.html
docs/architecture/: REPORT.md  graph.json  index.html
docs/archive-preview/: data.json  meta.json  style.css
docs/css/: style.css
docs/js/: main.js
examples/: gen_screenshots.rs
extensions/chrome/: PRIVACY.md  README.md  STORE_LISTING.md  annotate.css  annotate.js  background.js  cf-compare.css  cf-compare.js  cf-favorites.js  cf-problem.js  cf-timer.css  cf-timer.js  cf-tools.css  content.js  contests-ui.js  contests.css  cpos-challenge-bg.js  cpos-challenge-core.js  cpos-challenge-ui.js  cpos-challenge.js  cpos-config.js  cpos-contests.js  cpos-daily.js  cpos-highlight.js  cpos-style-core.js  draw.css  draw.js  highlight.css  highlight.js  ide.css  ide.js  ladder.css  ladder.js  manifest.json  modernize.js  package-lock.json  package-store.sh  package.json  popup.css  popup.html  (+7 more)
extensions/firefox/: README.md  annotate.css  annotate.js  background.js  carrot.js  cf-compare.css  cf-compare.js  cf-favorites.js  cf-problemset.js  cf-standings.js  (+27 more)
src/: app.rs  main.rs
tools/: build_graph.py  make_companion_slides.py  make_promo_tiles.py  optimize_screens.py  preview.sh  render_screens.py  sync_archive_preview.py
(+31 files in other folders)
