[package]
name = "cpos"
version = "0.1.6"
edition = "2024"
description = "Competitive Programming Operating System — terminal app, VS Code extension, and browser companion for Codeforces and CSES"
license = "MIT"
repository = "https://github.com/Soham109/cpos"
keywords = ["competitive-programming", "codeforces", "cses", "tui", "cli"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
scraper = "0.22"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "6"
toml = "0.8"
fuzzy-matcher = "0.3"
unicode-width = "0.2"
tiny_http = "0.12"
